modified:   app/Http/Controllers/Api/CommentController.php 	modified:   app/Http/Requests/StoreCommentRequest.php 	modified:   storage/api-docs/api-docs.json
